# juncture-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/: juncture
.github/workflows/: ci.yml
docker/keboola/: Dockerfile  README.md  entrypoint.py
docs/: BENCHMARKS.md  CONFIGURATION.md  DESIGN.md  MIGRATION_TIPS.md  MORNING_BRIEF.md  RESEARCH.md  ROADMAP.md  STATUS.md  STRATEGY.md  TUTORIAL.md  VISION.md  src.md
docs/rfcs/: 0001-web-ui-v2.md
examples/ecommerce/: README.md  juncture.yaml
examples/ecommerce/models/: country_revenue.sql  customer_segment.py  dim_customers.sql  fct_completed_orders.sql  raw_customers.sql  raw_orders.sql  schema.yml
examples/eu_ecommerce/: README.md  juncture.yaml
examples/eu_ecommerce/models/: schema.yml
examples/eu_ecommerce/scripts/: generate_data.py
examples/eu_ecommerce/seeds/: schema.yml
examples/eu_ecommerce/tests/: assert_campaign_dates_sane.sql  assert_no_negative_revenue.sql
examples/simple/: README.md  juncture.yaml
examples/simple/models/: customer_lifetime_value.sql  daily_revenue.sql  schema.yml  stg_orders.sql  stg_users.sql
examples/tutorial_shop/: README.md  juncture.yaml
examples/tutorial_shop/macros/: dates.sql  tiers.sql
examples/tutorial_shop/models/: schema.yml  stg_orders.sql
examples/tutorial_shop/scripts/: generate_data.py
examples/tutorial_shop/seeds/: customers.csv  orders.csv
plugins/juncture/.claude-plugin/: plugin.json
scripts/: analyze_execute.py  benchmark.py  collect_errors.py
skills/juncture/: SKILL.md
src/juncture/: __init__.py  _auto_update.py  _changelog.py  _version.py
src/juncture/adapters/: __init__.py  base.py  duckdb_adapter.py  registry.py  snowflake_adapter.py
src/juncture/cli/: __init__.py  app.py  debug_cmds.py  migrate.py  sql.py
src/juncture/core/: __init__.py  context.py  dag.py  decorators.py  executor.py  model.py  project.py  run_history.py  runner.py  seeds.py  state.py  type_inference.py
src/juncture/diagnostics/: __init__.py  classifier.py
src/juncture/keboola/: __init__.py  runner.py
src/juncture/mcp/: __init__.py  server.py
src/juncture/migration/: __init__.py  keboola_sql.py  keboola_sync_pull.py  split_execute.py
src/juncture/web/: __init__.py  (+1 more)
tests/integration/: test_cli.py  test_custom_tests.py  test_dry_run.py  test_duckdb_end_to_end.py  test_eu_ecommerce_example.py  test_execute_continue_on_error.py  test_execute_materialization.py  test_execute_parallel.py  test_jinja_mode.py  test_model_disable.py  test_parquet_seeds.py  test_project_seed_schemas.py  test_python_model.py  test_run_history.py  test_seeds.py  test_split_execute_e2e.py  test_web_server.py
tests/unit/: test_auto_update.py  test_changelog.py  test_dag.py  test_decorators.py  test_diagnostics.py  test_jinja_macros.py  test_mcp_server.py  test_migration.py  test_model.py  test_observability.py  test_parser.py  test_profiles.py  test_project_env_vars.py  test_project_governance.py  test_schema_aware_translate.py  test_sentinel_detector.py  test_split_execute.py  test_sql_split.py  test_state.py  test_statement_dag.py  test_sync_pull_migration.py  test_sync_pull_validate.py  test_type_inference.py
(+33 files in other folders)
